<resources>
    <string name="app_name">FindMovies</string>
    <string name="name_term">Терминатор: Темные судьбы. 2019</string>
    <string name="name_male">Малефисента: Владычица тьмы. 2019</string>
    <string name="name_astr">К звёздам. 2019</string>
    <string name="name_king">Kingsman: Начало. 2020</string>
    <string name="note_term">Сара Коннор превратилась в настоящую охотницу за терминаторами и теперь занимается уничтожением роботов-убийц из будущего. Она считала, что главное — это не дать им добраться до Джона, но теперь появилась Дани Рамос, от выживания которой также зависит судьба человечества. Вместе с ней в бой вступает и загадочная Грейс, смесь человека и машины.</string>
    <string name="note_male">Действие происходит через несколько лет после того, как Малефисента наложила злые чары на принцессу Аврору. Фильм рассказывает про сложную взаимосвязь между тёмной феей и будущей королевой, о новых союзниках и противниках в деле защиты волшебного леса и магических существах, которые в нем обитают.</string>
    <string name="note_astr">Инженер армейского корпуса путешествует по Галактике в поисках отца, который отправился на поиски внеземной цивилизации 20 лет назад и исчез.</string>
    <string name="note_king">«Kingsman» — организация супершпионов, действующая на благо человечества вдали от любопытных глаз. И один из первых и самых талантливых оперативников в истории организации — Конрад, молодой и наглый сын герцога Оксфордского. Как и многие его друзья он мечтал служить на благо Англии, но в итоге оказался втянутым в тайный мир шпионов и убийц.</string>
    <string name="details">Детали</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="chooser_title">Поделиться</string>
    <string name="textViewCommentsHint">Поделитесь своими комментариями</string>
    <string name="checkBoxLikeText">Лайк</string>
    <string name="buttonOk">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>
    <string name="add_movie">Добавить фильм</string>
    <string name="movie_description">Movie description:</string>
    <string name="movie_name">Name</string>
    <string name="movie_notes">Notes</string>
</resources>
