<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="@dimen/imageWidth"
                android:layout_height="@dimen/imageHeight"
                android:contentDescription="@string/name_astr"
                android:src="@drawable/pict_astr_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"

                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewAstr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:lines="2"
                    android:maxLines="5"
                    android:text="@string/name_astr"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnDetailsAstr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="@dimen/imageWidth"
                android:layout_height="@dimen/imageHeight"
                android:contentDescription="@string/name_male"
                android:src="@drawable/pict_male_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:lines="2"
                    android:maxLines="5"
                    android:text="@string/name_male"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnDetailsMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="@dimen/imageWidth"
                android:layout_height="@dimen/imageHeight"
                android:contentDescription="@string/name_term"
                android:src="@drawable/pict_term_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:lines="2"
                    android:maxLines="5"
                    android:text="@string/name_term"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnDetailsTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="@dimen/imageWidth"
                android:layout_height="@dimen/imageHeight"
                android:contentDescription="@string/name_king"
                android:src="@drawable/pict_king_small" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewKing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:duplicateParentState="false"
                    android:lines="2"
                    android:maxLines="5"
                    android:text="@string/name_king"
                    android:textIsSelectable="true"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/btnDetailsKing"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnDetailsKing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnInviteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friend"></Button>

    </LinearLayout>

</ScrollView>