<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <!--    tools:showIn="@layout/app_bar_main"-->

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/linLayoutPadding"
        android:paddingLeft="@dimen/linLayoutPadding"
        android:paddingRight="@dimen/linLayoutPadding"
        android:paddingTop="@dimen/linLayoutPadding"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/linLayoutPadding"
            android:paddingLeft="@dimen/linLayoutPadding"
            android:paddingRight="@dimen/linLayoutPadding"
            android:paddingTop="@dimen/linLayoutPadding"
            >

            <ImageView
                android:id="@+id/imageViewAstr"
                android:layout_width="@dimen/imageViewWidth"
                android:layout_height="@dimen/imageViewHeight"
                android:contentDescription="@string/name_astr"
                android:src="@drawable/pict_astr_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAstr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/name_astr"
                android:textIsSelectable="true"
                android:textSize="@dimen/textSize"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/linLayoutPadding"
            android:paddingLeft="@dimen/linLayoutPadding"
            android:paddingRight="@dimen/linLayoutPadding"
            android:paddingTop="@dimen/linLayoutPadding"
            >

            <ImageView
                android:id="@+id/imageViewMale"
                android:layout_width="@dimen/imageViewWidth"
                android:layout_height="@dimen/imageViewHeight"
                android:contentDescription="@string/name_male"
                android:src="@drawable/pict_male_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:text="@string/name_male"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/textSize"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/linLayoutPadding"
            android:paddingLeft="@dimen/linLayoutPadding"
            android:paddingRight="@dimen/linLayoutPadding"
            android:paddingTop="@dimen/linLayoutPadding"
            >

            <ImageView
                android:id="@+id/imageViewTerm"
                android:layout_width="@dimen/imageViewWidth"
                android:layout_height="@dimen/imageViewHeight"
                android:contentDescription="@string/name_term"
                android:src="@drawable/pict_term_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:text="@string/name_term"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/textSize"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/linLayoutPadding"
            android:paddingLeft="@dimen/linLayoutPadding"
            android:paddingRight="@dimen/linLayoutPadding"
            android:paddingTop="@dimen/linLayoutPadding"
            >

            <ImageView
                android:id="@+id/imageViewKing"
                android:layout_width="@dimen/imageViewWidth"
                android:layout_height="@dimen/imageViewHeight"
                android:contentDescription="@string/name_king"
                android:src="@drawable/pict_king_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewKing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:text="@string/name_king"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/textSize"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
